--- a/.github/workflows/droid.yml
+++ b/.github/workflows/droid.yml
@@ -3,7 +3,7 @@ on: workflow_dispatch
 
 jobs:
   android-ndll:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     steps:
 
       - uses: actions/checkout@v4
@@ -14,7 +14,7 @@ jobs:
         uses: nttld/setup-ndk@v1
         id: setup-ndk
         with:
-          ndk-version: r21e
+          ndk-version: r15c
 
       - uses: actions/setup-java@v4
         with:
@@ -23,33 +23,35 @@ jobs:
 
       - uses: krdlab/setup-haxe@v1
         with:
-          haxe-version: ${{ env.HAXE_VERSION }}
+          haxe-version: 4.2.5
 
       - name: Set HAXEPATH
         run: |
           echo "HAXEPATH=$HAXE_STD_PATH/.." >> $GITHUB_ENV
+
       - name: Install Haxe dependencies
         run: |
           haxelib install hxcpp 4.2.1 --quiet
           haxelib install format --quiet
           haxelib install hxp --quiet
+          haxelib dev lime $GITHUB_WORKSPACE
+
       - name: Enable HXCPP compile cache
         run: |
           echo "HXCPP_COMPILE_CACHE=~/.hxcpp" >> $GITHUB_ENV
-      - name: Prepare Lime
-        run: |
-          haxelib dev lime ${{ github.workspace }}
-          haxelib run lime setup -alias -y -nocffi -eval
+
       - name: Configure Android support
         run: |
-          lime config ANDROID_SDK $ANDROID_HOME -eval
-          lime config ANDROID_NDK_ROOT ${{ steps.setup-ndk.outputs.ndk-path }} -eval
-          lime config JAVA_HOME $JAVA_HOME -eval
-          lime config ANDROID_SETUP true -eval
-          lime config -eval
+          haxelib run lime setup -alias -y
+          lime config ANDROID_SDK $ANDROID_HOME
+          lime config ANDROID_NDK_ROOT ${{ steps.setup-ndk.outputs.ndk-path }}
+          lime config JAVA_HOME $JAVA_HOME
+          lime config ANDROID_SETUP true
+
       - name: Rebuild Lime (Android)
         run: |
-          lime rebuild android -release -nocolor -verbose -nocffi -eval
+          lime rebuild android -release -nocolor -verbose -nocffi
+
       - uses: actions/upload-artifact@v4
         with:
           name: Android-NDLL
@@ -57,19 +59,3 @@ jobs:
             ndll/Android/
             !**/.gitignore
           if-no-files-found: error
-
-      - name: Install samples
-        run: |
-          haxelib git lime-samples https://github.com/openfl/lime-samples --quiet
-      - name: Build HelloWorld sample
-        run: |
-          lime create HelloWorld -verbose -nocolor -eval
-          lime build HelloWorld android -release -verbose -nocolor -eval
-      - name: Build SimpleImage sample
-        run: |
-          lime create SimpleImage -verbose -nocolor -eval
-          lime build SimpleImage android -release -verbose -nocolor -eval
-      - name: Build SimpleAudio sample
-        run: |
-          lime create SimpleAudio -verbose -nocolor -eval
-          lime build SimpleAudio android -release -verbose -nocolor -eval
